--- a/templates/arino/scss/jbzoo.scss
+++ b/templates/arino/scss/jbzoo.scss
@@ -13,7 +13,7 @@ $black: "#000000";
 
 */
 
-#yoo-zoo .jbfilter-label {
+#sp-main-body .jbfilter-label {
   padding: 2px 4px;
   font-weight: bold;
   color: $black;
