pl-0 in category name

--- a/templates/arino/scss/jbzoo.scss
+++ b/templates/arino/scss/jbzoo.scss
@@ -28,7 +28,7 @@ body button:focus {
 }
 
 #sp-main-body .jbfilter-label {
-  padding: 2px 4px;
+  padding: 4px 0 2px 0;
   font-weight: bold;
   color: $black;
   text-shadow: none;
