--- a/templates/arino/scss/jbzoo.scss
+++ b/templates/arino/scss/jbzoo.scss
@@ -14,12 +14,43 @@ $black: "#000000";
 */
 
 .jbfilter-wrapper {
-  label {
-    line-height: 1;
-    vertical-align: top;
+  label.checkbox-lbl {
+    line-height: 1.5;
+    vertical-align: middle;
   }
-  input {
-    vertical-align: top;
+  input[type="checkbox"] {
+    vertical-align: middle;
+    -webkit-appearance: none;
+    position: relative;
+    align-items: center;
+    color: #000;
+    margin-right: 6px;
+    width: 1rem;
+    height: 1rem;
+    border: 2px solid #000;
+    cursor: pointer;
+    transition: all 0.4s;
+
+    &:before {
+      content: "";
+      position: absolute;
+      width: 1rem;
+      height: 0.5rem;
+      top: 0.3rem;
+      left: 0.03rem;
+      border-left: 3px solid transparent;
+      border-bottom: 3px solid transparent;
+      transform: rotate(-45deg);
+      transform-origin: left top;
+    }
+    &:checked::before {
+      border-color: #000;
+      -webkit-animation: checkboxOn 0.4s;
+      animation: checkboxOn 0.4s;
+    }
+    &:focus {
+      outline: none !important;
+    }
   }
 }
 
