--- a/templates/arino/css/presets/default.css
+++ b/templates/arino/css/presets/default.css
@@ -1,138 +1,137 @@
 /**
  * @package Helix Ultimate Framework
  * @author JoomShaper https://www.joomshaper.com
- * @copyright Copyright (c) 2010 - 2018 JoomShaper
+ * @copyright Copyright (c) 2010 - 2019 JoomShaper
  * @license http://www.gnu.org/licenses/gpl-2.0.html GNU/GPLv2 or Later
  */
 body, .sp-preloader {
   background-color: #fff;
-  color: #252525;
+  color: #000;
 }
 .sp-preloader > div {
-  background: #0345bf;
+  background: #e65100;
 }
 .sp-preloader > div:after {
   background: #fff;
 }
 #sp-top-bar {
-  background: #333;
-  color: #aaa;
+  color: #000;
 }
 #sp-top-bar a {
-  color: #aaa;
+  color: #000;
 }
 #sp-header {
-  background: #fff;
+  background: #ffffff;
 }
 a {
-  color: #0345bf;
+  color: #e65100;
 }
 a:hover, a:focus, a:active {
-  color: #044cd0;
+  color: #e65100;
 }
 .tags > li {
   display: inline-block;
 }
 .tags > li a {
-  background: rgba(3, 69, 191, 0.1);
-  color: #0345bf;
+  background: rgba(230, 81, 0, 0.1);
+  color: #e65100;
 }
 .tags > li a:hover {
-  background: #044cd0;
+  background: #e65100;
 }
 .article-social-share .social-share-icon ul li a {
-  color: #252525;
+  color: #fff;
 }
 .article-social-share .social-share-icon ul li a:hover, .article-social-share .social-share-icon ul li a:focus {
-  background: #0345bf;
+  background: #1d2228;
 }
 .pager > li a {
-  border: 1px solid #ededed;
-  color: #252525;
+  border: 1px solid rgba(0, 0, 0, .1);
+  color: #000;
 }
 .sp-reading-progress-bar {
-  background-color: #0345bf;
+  background-color: #e65100;
 }
 .sp-megamenu-parent > li > a {
-  color: #252525;
+  color: #000;
 }
 .sp-megamenu-parent > li:hover > a {
-  color: #0345bf;
+  color: #e65100;
 }
 .sp-megamenu-parent > li.active > a, .sp-megamenu-parent > li.active:hover > a {
-  color: #0345bf;
+  color: #e65100;
 }
 .sp-megamenu-parent .sp-dropdown .sp-dropdown-inner {
   background: #fff;
 }
 .sp-megamenu-parent .sp-dropdown li.sp-menu-item > a {
-  color: #252525;
+  color: #000;
 }
 .sp-megamenu-parent .sp-dropdown li.sp-menu-item > a:hover {
-  color: #0345bf;
+  color: #e65100;
 }
 .sp-megamenu-parent .sp-dropdown li.sp-menu-item.active > a {
-  color: #0345bf;
+  color: #e65100;
 }
 .sp-megamenu-parent .sp-mega-group > li > a {
-  color: #252525;
+  color: #000;
 }
 #offcanvas-toggler > .fa {
-  color: #252525;
+  color: #000;
 }
 #offcanvas-toggler > .fa:hover, #offcanvas-toggler > .fa:focus, #offcanvas-toggler > .fa:active {
-  color: #0345bf;
+  color: #e65100;
 }
 .offcanvas-menu {
   background-color: #fff;
-  color: #252525;
+  color: #000;
 }
 .offcanvas-menu .offcanvas-inner .sp-module ul > li a, .offcanvas-menu .offcanvas-inner .sp-module ul > li span {
-  color: #252525;
+  color: #000;
 }
 .offcanvas-menu .offcanvas-inner .sp-module ul > li a:hover, .offcanvas-menu .offcanvas-inner .sp-module ul > li span:hover, .offcanvas-menu .offcanvas-inner .sp-module ul > li a:focus, .offcanvas-menu .offcanvas-inner .sp-module ul > li span:focus {
-  color: #0345bf;
+  color: #e65100;
 }
 .offcanvas-menu .offcanvas-inner .sp-module ul > li.menu-parent > a > .menu-toggler, .offcanvas-menu .offcanvas-inner .sp-module ul > li.menu-parent > .menu-separator > .menu-toggler {
-  color: rgba(37, 37, 37, 0.5);
+  color: rgba(0, 0, 0, 0.5);
 }
 .offcanvas-menu .offcanvas-inner .sp-module ul > li ul li a {
-  color: rgba(37, 37, 37, 0.8);
+  color: rgba(0, 0, 0, 0.8);
 }
 .btn-primary, .sppb-btn-primary {
-  border-color: #0345bf;
-  background-color: #0345bf;
+  border-color: #e65100;
+  background-color: #e65100;
 }
 .btn-primary:hover, .sppb-btn-primary:hover {
-  border-color: #044cd0;
-  background-color: #044cd0;
+  border-color: #e65100;
+  background-color: #e65100;
 }
 ul.social-icons > li a:hover {
-  color: #0345bf;
+  color: #e65100;
 }
 .sp-page-title {
-  background: #0345bf;
+  background: #fff;
 }
 .layout-boxed .body-innerwrapper {
   background: #fff;
 }
 .sp-module ul > li > a {
-  color: #252525;
+  color: #000;
 }
 .sp-module ul > li > a:hover {
-  color: #0345bf;
+  color: #e65100;
 }
 .sp-module .latestnews > div > a {
-  color: #252525;
+  color: #000;
 }
 .sp-module .latestnews > div > a:hover {
-  color: #0345bf;
+  color: #e65100;
 }
 .sp-module .tagscloud .tag-name:hover {
-  background: #0345bf;
+  background: #e65100;
 }
 .search .btn-toolbar button {
-  background: #0345bf;
+  background: #e65100;
 }
 #sp-footer, #sp-bottom {
   background: #171717;
@@ -148,22 +147,22 @@ ul.social-icons > li a:hover {
   color: #fff;
 }
 .sp-comingsoon body {
-  background-color: #0345bf;
+  background-color: #e65100;
 }
 .pagination > li > a, .pagination > li > span {
-  color: #252525;
+  color: #000;
 }
 .pagination > li > a:hover, .pagination > li > span:hover, .pagination > li > a:focus, .pagination > li > span:focus {
-  color: #252525;
+  color: #000;
 }
 .pagination > .active > a, .pagination > .active > span {
-  border-color: #0345bf;
-  background-color: #0345bf;
+  border-color: #e65100;
+  background-color: #e65100;
 }
 .pagination > .active > a:hover, .pagination > .active > span:hover, .pagination > .active > a:focus, .pagination > .active > span:focus {
-  border-color: #0345bf;
-  background-color: #0345bf;
+  border-color: #e65100;
+  background-color: #e65100;
 }
 .error-code, .coming-soon-number {
-  color: #0345bf;
+  color: #e65100;
 }
